# basil-streamer

./: .gitignore  Cargo.toml  Readme.MD  build.rs  config.toml  setup_replay_viewer.sh  stream_to_twitch.sh
.github/workflows/: rust.yml
site/: index.html  index.js  index.scss  package-lock.json  package.json
src/: main.rs
