[package]
name = "basil-stream-master"
version = "0.1.0"
authors = ["Bytekeeper <therealdante@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
rand = "0.7"
tokio = {version = "0.2", features = ["full"]}
twitch-irc = "0.2.1"
futures = "0.3"
warp = "0.2.5"
toml = "0.5"

[build-dependencies]
actix-web-static-files = "3.0"
