[package]
name = "basil-stream-master"
version = "0.1.0"
authors = ["Bytekeeper <therealdante@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
rand = "0.8"
tokio = {version = "1.24", features = ["full"]}
twitch-irc = "5.0"
futures = "0.3"
warp = "0.3.3"
toml = "0.5"
base64 = "0.20"
url = "2.1"
